--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>b2b</title>
+    <title>航空互联</title>
     <!--移动端兼容适配 -->
     <script type="text/javascript">
         if (/Android (\d+\.\d+)/.test(navigator.userAgent)) {
@@ -1216,10 +1216,10 @@ a {
 .p4-cir9{left: 86px;top:780px;width: 115px;height: 115px;}
 .p4-icon1{left: 534px;top:378px;width: 77px;height: 65px;}
 .p4-icon2{left: 103px;top:529px;width: 52px;height: 48px;}
-.p4-icon3{left: 328px;top:516px;width: 89px;height: 106px;}
+.p4-icon3{left: 337px;top:516px;width: 89px;height: 106px;}
 .p4-icon4{left: 572px;top:582px;width: 55px;height: 69px;}
 .p4-icon5{left: 440px;top:810px;width: 62px;height: 62px;}
-.p4-icon9{left: 122px;top:806px;width: 50px;height: 64px;}
+.p4-icon9{left: 120px;top:811px;width: 50px;height: 64px;}
 .p4-text1{left: 576px;top:472px;width: 118px;height: 28px;}
 .p4-text2{left: 61px;top:603px;width: 110px;height: 26px;}
 .p4-text3{left: 310px;top:677px;width: 133px;height: 32px;}
@@ -1281,7 +1281,7 @@ a {
   .p5-4{left: 206px;top:692px;width: 354px;height: 110px;}
   .href-mail{position: absolute;width: 100%;height: 100%;}
   /* icon */
-  .icon{background-image: url(../images/icon2.png);background-repeat: no-repeat;background-size: 960px auto;}
+  .icon{background-image: url(../images/icon3.png);background-repeat: no-repeat;background-size: 960px auto;}
   .icon-3-1{background-position: 0 0;width: 68px;height: 68px;}
   .icon-3-2{background-position: -160px 0;width: 84px;height: 81px;}
   .icon-3-3{background-position: -320px 0;width: 75px;height: 75px;}
@@ -1291,10 +1291,10 @@ a {
   .icon-3-7{background-position: 0 -160px;width: 55px;height: 74px;}
   .icon-4-1{background-position: -160px -160px;width: 50px;height: 64px;}
   .icon-4-2{background-position: -320px -160px;width: 52px;height: 48px;}
-  .icon-4-3{background-position: -480px -160px;width: 97px;height: 97px;}
+  .icon-4-3{background-position: -480px -160px;width: 97px;height: 97px;background-position: 0 -320px;width: 75px;height: 97px;}
   .icon-4-4{background-position: -640px -160px;width: 77px;height: 68px;}
   .icon-4-5{background-position: -800px -160px;width: 76px;height: 75px;}
-  .icon-4-6{background-position: 0 -320px;width: 50px;height: 64px;}
+  .icon-4-6{background-position: 0 -320px;width: 50px;height: 64px;background-position: -480px -160px;width: 50px;height: 50px;}
   /* text */
   .text{background-image: url(../images/text2.png);background-repeat: no-repeat;background-size: 960px auto;}
   .text-2-1{background-position: 0 0;width: 97px;height: 94px;}
@@ -1311,10 +1311,10 @@ a {
   .text-3-7{background-position: -480px -160px;width: 66px;height: 32px;}
   .text-4-1{background-position: -640px -160px;width: 118px;height: 28px;}
   .text-4-2{background-position: -800px -160px;width: 110px;height: 26px;}
-  .text-4-3{background-position: 0 -320px;width: 133px;height: 32px;}
+  .text-4-3{background-position: 0 -320px;width: 133px;height: 32px;background-position: -480px -320px;width: 134px;height: 32px;}
   .text-4-4{background-position: -160px -320px;width: 132px;height: 32px;}
   .text-4-5{background-position: -320px -320px;width: 134px;height: 32px;}
-  .text-4-6{background-position: -480px -320px;width: 134px;height: 32px;}
+  .text-4-6{background-position: -480px -320px;width: 134px;height: 32px;background-position: 0 -320px;width: 133px;height: 32px;}
   /* arrow */
   .u-guideTop{background: url(../images/arrow_icon.png) 0 -31px;width: 76px;height: 31px;background-size: 76px auto;}
   .arrow-first{background: url(../images/arrow_icon.png) 0 0;}
@@ -1342,7 +1342,7 @@ a {
               100%{opacity:0;transform:scale(0.3);-webkit-transform:scale(.3)}
 }
 /* sec */
-.pannels .mc-wrap-back{position: absolute;left: 510px;top:52px;background-position:-160px -320px;width:273px;height:83px;transform:scale(0.6);-webkit-transform:scale(0.6);opacity:0;transition:opacity .5s .2s;}
+.pannels .mc-wrap-back{position: absolute;left: 510px;top:52px;background-position:-160px -320px;width:273px;height:83px;transform:scale(0.6);-webkit-transform:scale(0.6);opacity:0;transition:opacity .1s;}
 .float-show .mc-wrap-back{opacity:1;}
 .mc-wrap-detail{width: 100%;height: 100%;}
 .secene-sec{position: absolute;top:0;left: 0;height: 100%;width: 100%;overflow: hidden;-webkit-transform-style: preserve-3d;transform-style: preserve-3d;-webkit-backface-visibility: hidden;backface-visibility: hidden;opacity: 0;/*background-color: #fff;*/}
@@ -1378,9 +1378,11 @@ a {
     }
     /* mc-wrap-page */
     .float-show{z-index: 1000;}
-    .mc-wrap-page{position: absolute;bottom: 60px;z-index: 1000;width: 100%;height: 31px;overflow: hidden;text-align: center}
-    .mc-wrap-page span{display: inline-block;width: 14px;height: 14px;background-image: url(../images/arrow_icon2.png);background-position: 0 -62px;background-size: 76px auto;margin-right: 10px;opacity: .5}
+    .mc-wrap-page{position: absolute;bottom: 60px;z-index: 1000;width: 100%;height: 31px;overflow: hidden;text-align: center;transition:opacity .1s;}
+    .mc-wrap-page span{display: inline-block;width: 14px;height: 14px;background-image: url(../images/arrow_icon2.png);background-position: 0 -62px;background-size: 76px auto;margin-right: 10px;opacity: 0.5;}
     .mc-wrap-page span.page-current{background-position: 0 -62px;opacity: 1}
+    .secene-sec-changing .mc-wrap-back,.secene-sec-changing .mc-wrap-page{opacity: 0;}
+    .float-wrap-hide ~ .mc-wrap-back,.float-wrap-hide ~ .mc-wrap-page{opacity: 0;transition:opacity .2s;}
 </style>
 </head>
 <body>
@@ -1769,26 +1771,26 @@ a {
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image p4-cir1 p-cir" data-detail="detail4-6">
+            <div class="mc mc-image p4-cir1 p-cir" data-detail="detail4-5">
                 <div class="mc-wrap delay_1_8s duration_0_8s">
                     <div class="img-wrap"><img src="../images/cir/cir_green.png">
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image p4-cir2 p-cir" data-detail="detail4-8">
+            <div class="mc mc-image p4-cir2 p-cir" data-detail="detail4-3">
                             <div class="mc-wrap delay_1_8s duration_0_8s">
                                 <div class="img-wrap"><img src="../images/cir/cir_oriange.png">
                                 </div>
                             </div>
                         </div>
 
-            <div class="mc mc-image p4-cir4 p-cir" data-detail="detail4-2">
+            <div class="mc mc-image p4-cir4 p-cir" data-detail="detail4-7">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="img-wrap"><img src="../images/cir/cir_blue.png">
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image p4-cir5 p-cir" data-detail="detail4-3">
+            <div class="mc mc-image p4-cir5 p-cir" data-detail="detail4-9">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="img-wrap"><img src="../images/cir/cir_purple.png">
                                 </div>
@@ -1812,7 +1814,7 @@ a {
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image p4-cir9 p-cir" data-detail="detail4-4">
+            <div class="mc mc-image p4-cir9 p-cir" data-detail="detail4-8">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <div class="img-wrap"><img src="../images/cir/cir_greenblue.png">
                     </div>
@@ -1823,28 +1825,28 @@ a {
                     <div class="icon icon-4-3"></div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon1 p-icon" data-detail="detail4-6">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon1 p-icon" data-detail="detail4-5">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <div class="icon icon-4-1"></div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon2 p-icon" data-detail="detail4-8">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon2 p-icon" data-detail="detail4-3">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-2"></div>
                             </div>
                         </div>
 
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon4 p-icon" data-detail="detail4-2">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon4 p-icon" data-detail="detail4-7">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-4"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon5 p-icon" data-detail="detail4-3">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon5 p-icon" data-detail="detail4-9">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-5"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon9 p-icon" data-detail="detail4-4">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon9 p-icon" data-detail="detail4-8">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-6"></div>
                             </div>
@@ -1854,28 +1856,28 @@ a {
                     <div class="text text-4-3"></div>
                 </div>
             </div>
-                        <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text1 p-text" data-detail="detail4-6">
+                        <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text1 p-text" data-detail="detail4-5">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <div class="text text-4-1"></div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text2 p-text" data-detail="detail4-8">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text2 p-text" data-detail="detail4-3">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-2"></div>
                             </div>
                         </div>
 
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text4 p-text" data-detail="detail4-2">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text4 p-text" data-detail="detail4-7">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-4"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text5 p-text" data-detail="detail4-3">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text5 p-text" data-detail="detail4-9">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-5"></div>
                             </div>
                         </div>
-                        <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text9 p-icon" data-detail="detail4-4">
+                        <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text9 p-icon" data-detail="detail4-8">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-6"></div>
                             </div>
@@ -2016,7 +2018,7 @@ a {
       "../images/arrow_icon.png",
       "../images/title1.png",
       "../images/text2.png",
-      "../images/icon2.png",
+      "../images/icon3.png",
       "../images/cir/cir_blue_opacity.png",
       "../images/cir/cir_blue.png",
       "../images/cir/cir_green.png",
