--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1045,17 +1045,17 @@ a {
 .pannels .duration_1_0s{-webkit-transition-duration:1.0s;-o-transition-duration:1.0s;transition-duration:1.0s;-webkit-animation-duration:1.0;-o-animation-duration:1.0s;animation-duration:1.0s;}
     /* custom */
     /* p1 */
-    .p1-plane{left: 212px;top:271px;width: 306px;height: 148px;}
-    .p1-logo{left: 188px;top: 460px;width: 355px;height: 113px;}
+    .p1-plane{left: 212px;top:271px;width: 306px;height: 148px;left: 247px;top:184px;}
+    .p1-logo{left: 188px;top: 460px;width: 355px;height: 113px;left: 216px;top:506px;}
     .p1-slogan{left: 191px;top:613px;width: 362px;height: 78px;}
     .p1-about{left: 255px;top:823px;width: 239px;height: 81px;}
-    .title{left:162px;top:135px;width:423px;height:138px;background-image: url(../images/title1.png);background-repeat: no-repeat;background-size: 750px auto;}
+    .title{left:162px;top:135px;width:423px;height:138px;background-image: url(../images/title2.png);background-repeat: no-repeat;background-size: 750px auto;}
     .scene-2 .title{background-position: 0 0;}
     .scene-3 .title{left: 197px;background-position: 0 -160px;}
     .scene-4 .title{left: 197px;background-position: 0 -320px;}
     .scene-5 .title{left: 205px;top:130px;width: 337px;height: 138px;background-position: 0 -480px;}
-    .img-1-plane{background-position: 0 -837px;width: 306px;height: 148px;}
-    .img-1-logo{background-position: 0 -724px;width: 355px;height: 113px;}
+    .img-1-plane{background-position: -41px -1063px;width: 238px;height: 300px;}
+    .img-1-logo{background-position: 0 -1386px;width: 313px;height: 79px;}
     .img-1-slogan{background-position: 0 -985px;width: 361px;height: 78px;}
     .img-1-about{background-position: 0 -643px;width: 239px;height: 81px;}
     /* p2 */
@@ -1383,7 +1383,7 @@ a {
     .mc-wrap-page span.page-current{background-position: 0 -62px;opacity: 1}
 
     .float-wrap-hide ~ .mc-wrap-back,.float-wrap-hide ~ .mc-wrap-page{opacity: 0;transition:opacity .2s;}
-    .float-wrap-show ~ .mc-wrap-back{opacity: 1;transition:opacity .1s .2s;}
+    .float-wrap-show ~ .mc-wrap-back{opacity: 1;transition:opacity .1s .3s;}
     .secene-sec-changing .float-wrap-show ~  .mc-wrap-back{opacity: 0;transition:opacity .2s;}
     .scene-1 .mc-wrap.mc-wrap-page,.scene-5 .mc-wrap.mc-wrap-page{opacity: 0;}
 </style>
@@ -2019,7 +2019,7 @@ a {
     var tasks = [
       "../images/bg_full.jpg",
       "../images/arrow_icon.png",
-      "../images/title1.png",
+      "../images/title2.png",
       "../images/text2.png",
       "../images/icon3.png",
       "../images/cir/cir_blue_opacity.png",
