--- a/hkhl/b2b1.html
+++ b/hkhl/b2b1.html
@@ -1473,7 +1473,11 @@ a {
         <div class="opa-stage stage" data-index="2" data-id="opa_stage_2">
             <div class="mc mc-image delay_0_0s float-mask">
                 <div class="mc-wrap mc-wrap-detail">
-
+                    <div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true"><img src="../images/detail/detail2-3.jpg"></div>
+                    <div class="secene-sec secene-1-2" data-sec-index="1"><img src="../images/detail/detail2-2.jpg"></div>
+                    <div class="secene-sec secene-1-3" data-sec-index="2"><img src="../images/detail/detail2-1.jpg"></div>
+                    <div class="secene-sec secene-1-4" data-sec-index="3"><img src="../images/detail/detail2-4.jpg"></div>
+                    <div class="secene-sec secene-1-5" data-sec-index="4" data-sec-last="true"><img src="../images/detail/detail2-5.jpg"></div>
                 </div>
                 <div class="mc-wrap mc-wrap-page">
                     <span class="icon"></span>
@@ -1581,7 +1585,13 @@ a {
         <div class="opa-stage stage" data-index="3" data-id="opa_stage_3" style="background-image: url('../images/bg/p3_bg.jpg'); background-color: rgb(153, 153, 153);">
             <div class="mc mc-image delay_0_0s float-mask">
                 <div class="mc-wrap mc-wrap-detail">
-
+                    <div class="secene-sec secene-2-1" data-sec-index="0" data-sec-first="true"><img src="../images/detail/detail3-4.jpg"></div>
+                    <div class="secene-sec secene-2-2" data-sec-index="1"><img src="../images/detail/detail3-6.jpg"></div>
+                    <div class="secene-sec secene-2-3" data-sec-index="2"><img src="../images/detail/detail3-5.jpg"></div>
+                    <div class="secene-sec secene-2-4" data-sec-index="3"><img src="../images/detail/detail3-1.jpg"></div>
+                    <div class="secene-sec secene-2-5" data-sec-index="4"><img src="../images/detail/detail3-3.jpg"></div>
+                                        <div class="secene-sec secene-2-6" data-sec-index="5"><img src="../images/detail/detail3-2.jpg"></div>
+                                        <div class="secene-sec secene-2-7" data-sec-index="6" data-sec-last="true"><img src="../images/detail/detail3-7.jpg"></div>
                 </div>
                 <div class="mc-wrap mc-wrap-page">
                     <span class="icon"></span>
@@ -1732,7 +1742,15 @@ a {
         <div class="opa-stage stage" data-index="4" data-id="opa_stage_4" style="background-image: url('../images/bg/p4_bg.jpg'); background-color: rgb(153, 153, 153);">
             <div class="mc mc-image delay_0_0s float-mask">
                 <div class="mc-wrap mc-wrap-detail">
-
+                    <div class="secene-sec secene-3-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail4-1.jpg"></div>
+                    <div class="secene-sec secene-3-2" data-sec-index="1"><img src="../images/detail/detail4-2.jpg"></div>
+                    <div class="secene-sec secene-3-3" data-sec-index="2"><img src="../images/detail/detail4-3.jpg"></div>
+                    <div class="secene-sec secene-3-4" data-sec-index="3"><img src="../images/detail/detail4-4.jpg"></div>
+                    <div class="secene-sec secene-3-5" data-sec-index="4"><img src="../images/detail/detail4-5.jpg"></div>
+                    <div class="secene-sec secene-3-6" data-sec-index="5"><img src="../images/detail/detail4-6.jpg"></div>
+                    <div class="secene-sec secene-3-4" data-sec-index="6"><img src="../images/detail/detail4-7.jpg"></div>
+                    <div class="secene-sec secene-3-5" data-sec-index="7"><img src="../images/detail/detail4-8.jpg"></div>
+                    <div class="secene-sec secene-3-6" data-sec-index="8" data-sec-last="true"><img src="../images/detail/detail4-9.jpg"></div>
                 </div>
                 <div class="mc-wrap mc-wrap-page">
                     <span class="icon"></span>
@@ -1745,7 +1763,7 @@ a {
                     <span class="icon"></span>
                     <span class="icon"></span>
                 </div>
-
+                
                 <div class="mc-wrap mc-wrap-back icon"></div>
             </div>
             <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn title">
@@ -1886,7 +1904,7 @@ a {
         <div class="opa-stage stage" data-index="5" data-id="opa_stage_5" style="background-image: url(../images/bg/p5_bg.jpg); background-color: #0050b2 ;">
             <div class="mc mc-image delay_0_0s float-mask">
                 <div class="mc-wrap mc-wrap-detail">
-
+                    <div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>
                 </div>
                 <div class="mc-wrap mc-wrap-page">
                     <span class="icon"></span>
@@ -1932,7 +1950,7 @@ a {
 <a href="javascript:void(0);" class="u-guideTop z-move arrow-first" id="J_GuideTop"></a>
 <script src="../js/app.utils.min.js"></script>
 <script src="../js/spread.min - 0524.js"></script>
-<!--<script src="../js/fade.min.js"></script>-->
+<!--<script src="../js/slide.min.js"></script>-->
 
 <script>
 (function(){
@@ -2206,16 +2224,7 @@ new PreLoad(tasks, {onload: loading});
                 page.resize();
             }
         }, 100);
-        var float1 = '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail1-1.png"></div>';
-        var float2 = '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true"><img src="../images/detail/detail2-3.jpg"></div><div class="secene-sec secene-1-2" data-sec-index="1"><img src="../images/detail/detail2-2.jpg"></div><div class="secene-sec secene-1-3" data-sec-index="2"><img src="../images/detail/detail2-1.jpg"></div><div class="secene-sec secene-1-4" data-sec-index="3"><img src="../images/detail/detail2-4.jpg"></div><div class="secene-sec secene-1-5" data-sec-index="4" data-sec-last="true"><img src="../images/detail/detail2-5.jpg"></div>';
-        var float3 = '<div class="secene-sec secene-2-1" data-sec-index="0" data-sec-first="true"><img src="../images/detail/detail3-4.jpg"></div><div class="secene-sec secene-2-2" data-sec-index="1"><img src="../images/detail/detail3-6.jpg"></div><div class="secene-sec secene-2-3" data-sec-index="2"><img src="../images/detail/detail3-5.jpg"></div><div class="secene-sec secene-2-4" data-sec-index="3"><img src="../images/detail/detail3-1.jpg"></div><div class="secene-sec secene-2-5" data-sec-index="4"><img src="../images/detail/detail3-3.jpg"></div><div class="secene-sec secene-2-6" data-sec-index="5"><img src="../images/detail/detail3-2.jpg"></div><div class="secene-sec secene-2-7" data-sec-index="6" data-sec-last="true"><img src="../images/detail/detail3-7.jpg"></div>';
-        var float4 ='<div class="secene-sec secene-3-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail4-1.jpg"></div><div class="secene-sec secene-3-2" data-sec-index="1"><img src="../images/detail/detail4-2.jpg"></div><div class="secene-sec secene-3-3" data-sec-index="2"><img src="../images/detail/detail4-3.jpg"></div><div class="secene-sec secene-3-4" data-sec-index="3"><img src="../images/detail/detail4-4.jpg"></div><div class="secene-sec secene-3-5" data-sec-index="4"><img src="../images/detail/detail4-5.jpg"></div><div class="secene-sec secene-3-6" data-sec-index="5"><img src="../images/detail/detail4-6.jpg"></div><div class="secene-sec secene-3-4" data-sec-index="6"><img src="../images/detail/detail4-7.jpg"></div><div class="secene-sec secene-3-5" data-sec-index="7"><img src="../images/detail/detail4-8.jpg"></div><div class="secene-sec secene-3-6" data-sec-index="8" data-sec-last="true"><img src="../images/detail/detail4-9.jpg"></div>';
-        var float5 = '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>';
-        var float6 =  '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div><div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>';
-        var float7 =  '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>';
-        var float8 =  '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>';
-       var floatMaskDom = [float1,float2,float3,float4,float5];
-        //var floatMaskDom = [float6,float6,float6,float6,float6];
+
         var floatHideFlag = false;
         var floatDom = document.querySelectorAll('.mc');
         var floatMask = document.querySelectorAll('.float-mask');
@@ -2225,14 +2234,14 @@ new PreLoad(tasks, {onload: loading});
             if (floatDom[i].hasAttribute('data-detail') && !floatHideFlag) {
                 var t = floatDom[i].getAttribute('data-detail');
                 floatDom[i].addEventListener(evs.touchup, function (ev) {
+
                         var t1 = this.getAttribute('data-detail');
                         var tDom = this.parentNode.querySelector('.float-mask .mc-wrap-detail');
+                        var detailDom = tDom.querySelectorAll('.secene-sec');
                         var detailPage = this.parentNode.querySelectorAll('.mc-wrap-page .icon');
                         var that = this;
                         var fromDetailPage = (/\d+/).exec(t1)[0];
                         var inDetailPage = (/\d+/).exec(t1.split('-')[1])[0] - 1;
-                         tDom.innerHTML = floatMaskDom[fromDetailPage-1];
-                    var detailDom = tDom.querySelectorAll('.secene-sec');
                         var floatTimeout;
                         var nPage = opaPage.querySelector('.current');
                         var nDetailPage = parseInt(nPage.getAttribute('data-index'));
@@ -2259,6 +2268,28 @@ new PreLoad(tasks, {onload: loading});
 
             }
         }
+        /*for (var i = 0; i < floatClose.length; i++) {
+            floatClose[i].addEventListener(evs.touchup, function (ev) {
+                var that = this;
+
+                if (floatHideFlag) {
+                }
+                else {
+                    floatHideFlag = true;
+                    App.Utils.removeClass(opaPage.querySelector('.current .float-mask .mc-wrap-detail'), 'float-wrap-show');
+                    App.Utils.addClass(opaPage.querySelector('.current .float-mask .mc-wrap-detail'), 'float-wrap-hide');
+                    App.Utils.removeClass(opaPage, 'float-show');
+                    setTimeout(function () {
+                        that.parentNode.style.zIndex = -1;
+                        App.Utils.removeClass(opaPage.querySelector('.current .float-mask .page-current'), 'page-current');
+                        App.Utils.removeClass(opaPage.querySelector('.current .float-mask .secene-sec-current'), 'secene-sec-current');
+                        App.Utils.removeClass(opaPage.querySelector('.current .float-mask .mc-wrap-detail'), 'float-wrap-hide');
+                        floatHideFlag = false;
+                    }, 320);
+                }
+                //return false;
+            }, false);
+        }*/
     };
 
     var evt = "onorientationchange" in window ? "orientationchange" : "resize",
