--- a/hkhl/5.html
+++ b/hkhl/5.html
@@ -1034,18 +1034,15 @@
         }
     </style>
     <style>
+        html{-webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
         .pannels .delay_0_0s{-webkit-transition-delay:0.0s;-o-transition-delay:0.0s;transition-delay:0.0s;-webkit-animation-delay:0.0s;-o-animation-delay:0.0s;animation-delay:0.0s;}
-        .pannels .delay_0_2s{-webkit-transition-delay:0.2s;-o-transition-delay:0.2s;transition-delay:0.2s;-webkit-animation-delay:0.2s;-o-animation-delay:0.2s;animation-delay:0.2s;}
-        .pannels .delay_0_3s{-webkit-transition-delay:0.3s;-o-transition-delay:0.3s;transition-delay:0.3s;-webkit-animation-delay:0.3s;-o-animation-delay:0.3s;animation-delay:0.3s;}
-        .pannels .delay_0_5s{-webkit-transition-delay:0.5s;-o-transition-delay:0.5s;transition-delay:0.5s;-webkit-animation-delay:0.5s;-o-animation-delay:0.5s;animation-delay:0.5s;}
         .pannels .delay_1_8s{-webkit-transition-delay:1.8s;-o-transition-delay:1.8s;transition-delay:1.8s;-webkit-animation-delay:1.8s;-o-animation-delay:1.8s;animation-delay:1.8s;}
         .pannels .duration_0_8s{-webkit-transition-duration:0.8s;-o-transition-duration:0.8s;transition-duration:0.8s;-webkit-animation-duration:0.8s;-o-animation-duration:0.8s;animation-duration:0.8s;}
-        .pannels .duration_0_4s{-webkit-transition-duration:0.4s;-o-transition-duration:0.4s;transition-duration:0.4s;-webkit-animation-duration:0.4;-o-animation-duration:0.4s;animation-duration:0.4s;}
-        .pannels .duration_0_3s{-webkit-transition-duration:0.3s;-o-transition-duration:0.3s;transition-duration:0.3s;-webkit-animation-duration:0.3;-o-animation-duration:0.3s;animation-duration:0.3s;}
-        .pannels .duration_0_5s{-webkit-transition-duration:0.5s;-o-transition-duration:0.5s;transition-duration:0.5s;-webkit-animation-duration:0.5;-o-animation-duration:0.5s;animation-duration:0.5s;}
-        .pannels .duration_0_6s{-webkit-transition-duration:0.6s;-o-transition-duration:0.6s;transition-duration:0.6s;-webkit-animation-duration:0.6;-o-animation-duration:0.6s;animation-duration:0.6s;}
-        .pannels .duration_1_0s{-webkit-transition-duration:1.0s;-o-transition-duration:1.0s;transition-duration:1.0s;-webkit-animation-duration:1.0;-o-animation-duration:1.0s;animation-duration:1.0s;}
-        .href-back{position: absolute;left: 510px;top:52px;background-position:-160px -320px;width:273px;height:83px;transform:scale(0.6);-webkit-transform:scale(0.6);opacity:1;transition:opacity .1s;background-size: 960px auto;background-image: url(../images/icon3.png)}
+        .pannels .duration_0_4s{-webkit-transition-duration:0.4s;-o-transition-duration:0.4s;transition-duration:0.4s;-webkit-animation-duration:0.4s;-o-animation-duration:0.4s;animation-duration:0.4s;}
+        .href-back{position: absolute;left: 510px;top:52px;background-position:-160px -320px;width:273px;height:83px;transform:scale(0.6);-webkit-transform:scale(0.6);opacity:1;background-size: 960px auto;background-image: url(../images/icon3.png);transition:opacity .4s .1s;opacity:0}
+        .href-back-init{opacity: 1;}
+        .href-back-hide{opacity: 0;}
+        .mc-wrap-page{display: none;}
     </style>
 </head>
 <body>
@@ -1074,6 +1071,9 @@
     </div>
 
 
+</div>
+<div class="mc-wrap-page">
+    <span class="icon"></span>
 </div>
 <a href="javascript:void(0);" class="u-guideTop z-move arrow-first " id="J_GuideTop"></a>
 <a href="b2b_android.html#p=4" class="href-back" id="hrefBack"></a>
@@ -1130,51 +1130,11 @@
 <script>
 
     (function(window, undefined){
-
-
-        var loader = document.getElementById("J_MiLoading"),
-                body = document.documentElement || document.body,
-                gTop = document.getElementById('J_GuideTop'),
+        var body = document.documentElement || document.body,
                 size = {
                     width: body.clientWidth > 750 ? 750 : body.clientWidth,
                     height: body.clientHeight
-                },
-                musicTip = document.querySelector('.music-tip'),
-                musicPlayer = document.getElementById('J_MusicPlayer'),
-                evs = {
-                    touchdown: 'ontouchstart' in window ? 'touchstart' : 'mousedown',
-                    touchmove: 'ontouchmove' in window ? 'touchmove' : 'mousemove',
-                    touchup: 'ontouchend' in window ? 'touchend' : 'mouseup'
                 };
-
-        //loading
-        var bar = loader.querySelector(".j-loading-text"),
-                opaPage = document.querySelector("#J_opaPage"),
-                num = 0,
-                time = 0,
-                state = true;
-
-        function loadOk(){
-            if(state){
-                state = false;
-                bar.innerHTML = "100%";
-                App.Utils.removeClass(loader, "active");
-                loader.style.zIndex = "0";
-                loader.style.visibility = "hidden";
-                App.Utils.removeClass(document.querySelector('.scene-1'),'start-animate');
-                setTimeout(function(){
-                    App.Utils.addClass(document.querySelector('.scene-1'),'start-animate');
-                },10)
-                setTimeout(function(){
-                    App.Utils.addClass(document.querySelector('.scene-1 .p-cir'),'p-cir-imp');
-                },1000)
-            }
-        }
-
-        var page = null,
-                count = 0,
-                initState = true;
-
         function executeMult(d, b) {
             var a = 0,
                     f = d.toString(),
@@ -1187,7 +1147,6 @@
             } catch(g) {}
             return Number(f.replace(".", "")) * Number(c.replace(".", "")) / Math.pow(10, a)
         }
-
         function executeDivi(arg1, arg2) {
             var t1 = 0,
                     t2 = 0,
@@ -1204,7 +1163,6 @@
                 return executeMult(r1 / r2, pow(10, t2 - t1));
             }
         }
-
         function backgroundJustify(){
             var bgEles = document.querySelectorAll(".stage-bg-edit"),
                     scale = executeDivi(body.clientHeight,960);
@@ -1261,93 +1219,11 @@
                     }
                 }
             });
-
-            musicTip = document.querySelector('.music-tip');
-            musicPlayer = document.getElementById('J_MusicPlayer');
-
-            musicTip.parentNode.style['opacity'] = 1;
-            setTimeout(function(){
-                musicTip.style['opacity'] = 0;
-            }, 3000);
-
-            musicPlayer.pause();
-            opaPage.addEventListener(evs.touchdown, function(ev){
-                if (initState) {
-                    musicPlayer.play();
-                    App.Utils.addClass(musicTip.parentNode, 'active');
-                    initState = false;
-                }
-            }, false);
-            // debugger;
-            musicTip.parentNode.addEventListener(evs.touchup, function(ev){
-                if (App.Utils.hasClass(musicTip.parentNode, 'active')) {
-                    musicPlayer.pause();
-                    App.Utils.removeClass(musicTip.parentNode, 'active');
-                } else {
-                    musicPlayer.play();
-                    App.Utils.addClass(musicTip.parentNode, 'active');
-                }
-                return false;
-            }, false);
-
             setInterval(function(){
                 if (page) {
                     page.resize();
                 }
             }, 100);
-            var float1 = '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail1-1.png"></div>';
-            var float2 = '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true"><img src="../images/detail/detail2-3.jpg"></div><div class="secene-sec secene-1-2" data-sec-index="1"><img src="../images/detail/detail2-2.jpg"></div><div class="secene-sec secene-1-3" data-sec-index="2"><img src="../images/detail/detail2-1.jpg"></div><div class="secene-sec secene-1-4" data-sec-index="3"><img src="../images/detail/detail2-4.jpg"></div><div class="secene-sec secene-1-5" data-sec-index="4" data-sec-last="true"><img src="../images/detail/detail2-5.jpg"></div>';
-            var float3 = '<div class="secene-sec secene-2-1" data-sec-index="0" data-sec-first="true"><img src="../images/detail/detail3-4.jpg"></div><div class="secene-sec secene-2-2" data-sec-index="1"><img src="../images/detail/detail3-6.jpg"></div><div class="secene-sec secene-2-3" data-sec-index="2"><img src="../images/detail/detail3-5.jpg"></div><div class="secene-sec secene-2-4" data-sec-index="3"><img src="../images/detail/detail3-1.jpg"></div><div class="secene-sec secene-2-5" data-sec-index="4"><img src="../images/detail/detail3-3.jpg"></div><div class="secene-sec secene-2-6" data-sec-index="5"><img src="../images/detail/detail3-2.jpg"></div><div class="secene-sec secene-2-7" data-sec-index="6" data-sec-last="true"><img src="../images/detail/detail3-7.jpg"></div>';
-            var float4 ='<div class="secene-sec secene-3-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail4-1.jpg"></div><div class="secene-sec secene-3-2" data-sec-index="1"><img src="../images/detail/detail4-2.jpg"></div><div class="secene-sec secene-3-3" data-sec-index="2"><img src="../images/detail/detail4-3.jpg"></div><div class="secene-sec secene-3-4" data-sec-index="3"><img src="../images/detail/detail4-4.jpg"></div><div class="secene-sec secene-3-5" data-sec-index="4"><img src="../images/detail/detail4-5.jpg"></div><div class="secene-sec secene-3-6" data-sec-index="5"><img src="../images/detail/detail4-6.jpg"></div><div class="secene-sec secene-3-4" data-sec-index="6"><img src="../images/detail/detail4-7.jpg"></div><div class="secene-sec secene-3-5" data-sec-index="7"><img src="../images/detail/detail4-8.jpg"></div><div class="secene-sec secene-3-6" data-sec-index="8" data-sec-last="true"><img src="../images/detail/detail4-9.jpg"></div>';
-            var float5 = '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>';
-            var float6 =  '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div><div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>';
-            var float7 =  '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>';
-            var float8 =  '<div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>';
-            var floatMaskDom = [float1,float2,float3,float4,float5];
-            //var floatMaskDom = [float6,float6,float6,float6,float6];
-            var floatHideFlag = false;
-            var floatDom = document.querySelectorAll('.mc');
-            var floatMask = document.querySelectorAll('.float-mask');
-            var floatClose = document.querySelectorAll('.mc-wrap-back');
-            var floatTimeOut;
-            for (var i = 0; i < floatDom.length; i++) {
-                if (floatDom[i].hasAttribute('data-detail') && !floatHideFlag) {
-                    var t = floatDom[i].getAttribute('data-detail');
-                    floatDom[i].addEventListener(evs.touchup, function (ev) {
-                        var t1 = this.getAttribute('data-detail');
-                        var tDom = this.parentNode.querySelector('.float-mask .mc-wrap-detail');
-                        var detailPage = this.parentNode.querySelectorAll('.mc-wrap-page .icon');
-                        var that = this;
-                        var fromDetailPage = (/\d+/).exec(t1)[0];
-                        var inDetailPage = (/\d+/).exec(t1.split('-')[1])[0] - 1;
-                        tDom.innerHTML = floatMaskDom[fromDetailPage-1];
-                        var detailDom = tDom.querySelectorAll('.secene-sec');
-                        var floatTimeout;
-                        var nPage = opaPage.querySelector('.current');
-                        var nDetailPage = parseInt(nPage.getAttribute('data-index'));
-                        if (floatTimeout) {
-                            clearTimeout(floatTimeout)
-                        }
-                        for (var i = 0; i < detailDom.length; i++) {
-                            App.Utils.removeClass(detailDom[i], 'secene-sec-current');
-                            detailDom[i].setAttribute('style', '');
-                        }
-                        floatTimeout = setTimeout(function () {
-
-                            App.Utils.addClass(detailPage[inDetailPage], 'page-current');
-                            opaPage.querySelector('.current .float-mask').style.zIndex = 20;
-                            App.Utils.addClass(opaPage, 'float-show float-wrap-show-first');
-                            App.Utils.addClass(opaPage.querySelector('.current .float-mask .mc-wrap-detail'), 'float-wrap-show');
-                            App.Utils.addClass(detailDom[inDetailPage], 'secene-sec-current');
-                            removeFirstClass();
-                        }, 300);
-                        function removeFirstClass(){
-                            setTimeout(function(){App.Utils.removeClass(opaPage, 'float-wrap-show-first');},300)
-                        }
-                    }, !1);
-
-                }
-            }
         };
 
         var evt = "onorientationchange" in window ? "orientationchange" : "resize",
