--- a/hkhl/b2c.html
+++ b/hkhl/b2c.html
@@ -1531,6 +1531,7 @@ a {
         left: 131px;
         top:345px;
         opacity: 0;
+        background-size: 100% 100%;
     }
     .scene-7 .clock {
         background-image: url(../images/b2c/p7_clock.png);
@@ -2942,7 +2943,7 @@ a {
         0%{
             background-size: 100% 100%;
             height: 920px;
-            -webkit-transform: translate(0,-1730px);
+            -webkit-transform: translate(0,-1640px);
             opacity: 1;
         }
         50%{
