--- a/hkhl/b2c.html
+++ b/hkhl/b2c.html
@@ -4583,8 +4583,8 @@ a {
         "../images/b2c/b_person_left_hand.png",
         "../images/b2c/b_person_right_foot.png",
         "../images/b2c/b_person_right_hand.png",
-        "../images/b2c/bg.png",
-        "../images/b2c/bg_circle.png",
+        "../images/b2c/bg2.png",
+        "../images/b2c/bg_circle1.png",
         "../images/b2c/chair.png",
         "../images/b2c/chair_nobody.png",
         "../images/b2c/p5_person_body.png"
